<resources>

    <!--  IMC APP  -->
    <string name="app_name">My Application</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="recalculate">Recalcular</string>
    <string name="result">Tu resultado</string>

    <string name="error">Error</string>

    <string name="title_low_weight">Bajo peso</string>
    <string name="description_low_weight">Estás por debajo del peso según tu altura y peso</string>

    <string name="title_normal_weight">Peso normal</string>
    <string name="description_normal_weight">Estás en un peso óptimo según tu altura y peso</string>

    <string name="title_high_weight">Sobrepeso</string>
    <string name="description_high_weight">Estás algo por encima del peso recomendado según tu altura y peso</string>

    <string name="title_extreme_weight">Obesidad</string>
    <string name="description_extreme_weight">Estás muy por encima del peso recomendado según tu altura y peso</string>

    <!--  TODO APP  -->
    <string name="todo_title">Tareas</string>
    <string name="todo_category">Categoría</string>
    <string name="todo_task">Tareas</string>
    <string name="todo_add_task">Añadir tarea</string>
    <string name="todo_edit_task">Editar tarea...</string>

    <string name="todo_business">Negocio</string>
    <string name="todo_personal">Personal</string>
    <string name="todo_other">Otro</string>
    <string name="todo_create_task">Crear Tarea</string>

    <string-array name="todo_spinner_array">
        <item>Editar</item>
        <item>Eliminar</item>
    </string-array>

    <!--  Superhero APP  -->
    <string name="superhero_intelligence">Intelligence</string>
    <string name="superhero_strength">Strength</string>
    <string name="superhero_speed">Speed</string>
    <string name="superhero_durability">Durability</string>
    <string name="superhero_power">Power</string>
    <string name="superhero_combat">Combat</string>

    <!--  Settings  -->
    <string name="settings_dark_mode_title">Modo oscuro</string>
    <string name="settings_dark_mode_description">Activa el modo oscuro para un cambio visual</string>

    <string name="settings_bluetooth_title">Bluetooth</string>
    <string name="settings_bluetooth_description">Conecta periféricos sin cables</string>
    <string name="settings_sound_title">Volumen</string>
    <string name="settings_vibration_title">Vibrar en las llamadas</string>

</resources>